syntax = "proto3";

package user;

option go_package="pb";

message Greeting {
    string firstName = 1;
    string lastName = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

service DemoService {
    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns  (stream GreetManyTimesResponse) {};

    // client streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    //bi directional
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

}